2003-04-23  Alan Modra  <amodra@bigpond.net.au>

	From Julien LEMOINE <speedblue@debian.org>
	* elf32-i386.c (elf_i386_info_to_howto): Delete.
	(elf_info_to_howto): Define as elf_i386_info_to_howto_rel.

2003-04-22  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* archures.c: Replace references to Mitsubishi M32R with references
	to Renesas M32R.
	* relocs.c: Likewise.
	* bfd-in2.h: Regenerate.

2003-04-21  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (alpha_elf_dynamic_symbol_p): Return false for an
	executable when a symbol is defined both regular and dynamic.

2003-04-21  Stephane Carrez  <stcarrez@nerim.fr>

	* Makefile.am (BFD32_BACKENDS): Add elf32-m68hc1x.lo.
	(elf32-m68hc1x.lo): Update dependencies
	* configure.in: Add elf32-m68hc1x.lo.
	* configure: Rebuild.
	* Makefile.in: Rebuild.

2003-04-21  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc1x.c: New file (from elf32-m68hc11.c and elf32-m68hc12.c)
	(m68hc11_elf_hash_table_create): New function.
	(elf32_m68hc11_link_hash_table_free): New function.
	(stub_hash_newfunc): New function.
	(m68hc11_add_stub): New function.
	(elf32_m68hc11_add_symbol_hook): New function.
	(elf32_m68hc11_setup_section_lists): New function.
	(elf32_m68hc11_next_input_section): New function.
	(elf32_m68hc11_size_stubs): New function.
	(elf32_m68hc11_build_stubs): New function.
	(m68hc11_get_relocation_value): New function.
	(elf32_m68hc11_relocate_section): Call the above to redirect
	some relocations to the trampoline code.
	(m68hc11_elf_export_one_stub): New function.
	(m68hc11_elf_set_symbol): New function.
	(elf32_m68hc11_build_stubs): Call it via bfd_hash_traverse.
	(m68hc11_elf_get_bank_parameters): Get parameters only when the info
	is not yet initialized.

	* elf32-m68hc1x.h: New file (from elf32-m68hc11.c and elf32-m68hc12.c)
	(elf32_m68hc11_stub_hash_entry): New struct.
	(m68hc11_page_info): Add trampoline handler address.
	(m68hc11_elf_link_hash_table): Add stubs generation members.